--- a/.env
+++ b/.env
@@ -12,15 +12,13 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/faroukx/Obsidian-shiba-inu-theme/HEAD/theme.css
-BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=false
-dgEnableSearch=false
+dgEnableSearch=true
 dgShowToc=false
 dgLinkPreview=false
 dgShowTags=true
