--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=false
-dgEnableSearch=true
+dgEnableSearch=false
 dgShowToc=false
 dgLinkPreview=false
 dgShowTags=true
