--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=CGfan AI Art Gallery
+SITE_NAME_HEADER=CGfan Collection
 SITE_MAIN_LANGUAGE=zh
 SITE_BASE_URL=https://sandmrkdigitalgarden.vercel.app
 SHOW_CREATED_TIMESTAMP=false
